Data Pre-processing

--- a/preProcess.ipynb
+++ b/preProcess.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-18T07:15:21.232339Z",
-     "start_time": "2024-12-18T07:15:21.132255Z"
+     "end_time": "2024-12-20T04:26:35.910472Z",
+     "start_time": "2024-12-20T04:26:35.810593Z"
     }
    },
    "source": [
@@ -43,18 +43,18 @@
        " 4  33;\"unknown\";\"single\";\"unknown\";\"no\";1;\"no\";\"n...                                                                                                  }"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T07:33:37.126499Z",
-     "start_time": "2024-12-18T07:33:37.009037Z"
+     "end_time": "2024-12-20T04:26:38.260791Z",
+     "start_time": "2024-12-20T04:26:38.119500Z"
     }
    },
    "cell_type": "code",
@@ -107,18 +107,18 @@
        " 4  unknown    5   may       198         1     -1         0  unknown  no  }"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 10
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-18T07:13:20.380683Z",
-     "start_time": "2024-12-18T07:13:20.344770Z"
+     "end_time": "2024-12-20T04:26:41.050569Z",
+     "start_time": "2024-12-20T04:26:41.019217Z"
     }
    },
    "cell_type": "code",
@@ -152,12 +152,107 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-20T04:27:37.952251Z",
+     "start_time": "2024-12-20T04:27:37.729036Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
+    "\n",
+    "# Load the dataset\n",
+    "input_path = \"data/bank-full.csv\"  # Adjust the path to your dataset\n",
+    "col_data = pd.read_csv(input_path)\n",
+    "\n",
+    "# Print column names for debugging\n",
+    "print(\"Columns in dataset:\", col_data.columns)\n",
+    "\n",
+    "# Step 1: Replace \"unknown\" and -1 placeholders\n",
+    "col_data.replace(\"unknown\", pd.NA, inplace=True)  # Replace \"unknown\" with NaN\n",
+    "if 'pdays' in col_data.columns:\n",
+    "    col_data['pdays'] = col_data['pdays'].replace(-1, pd.NA)  # Replace -1 with NaN\n",
+    "\n",
+    "# Step 2: Remove unnecessary columns\n",
+    "if 'duration' in col_data.columns:\n",
+    "    col_data.drop(columns=['duration'], inplace=True)\n",
+    "\n",
+    "# Step 3: Process categorical columns\n",
+    "categorical_columns = [\n",
+    "    'job', 'marital', 'education', 'default', 'housing', 'loan',\n",
+    "    'contact', 'month', 'poutcome', 'y'\n",
+    "]\n",
+    "\n",
+    "label_encoders = {}\n",
+    "for col in categorical_columns:\n",
+    "    if col in col_data.columns:  # Ensure the column exists\n",
+    "        col_data[col] = col_data[col].astype(str).str.lower().str.strip()\n",
+    "        le = LabelEncoder()\n",
+    "        col_data[col] = le.fit_transform(col_data[col].fillna(\"missing\"))  # Handle NaNs with \"missing\"\n",
+    "        label_encoders[col] = le\n",
+    "\n",
+    "# Step 4: Process numerical columns\n",
+    "numerical_columns = ['age', 'balance', 'day', 'campaign', 'pdays', 'previous']\n",
+    "\n",
+    "# Check for the existence of numerical columns and fill missing values\n",
+    "for col in numerical_columns:\n",
+    "    if col in col_data.columns:\n",
+    "        col_data[col] = col_data[col].fillna(col_data[col].mean())\n",
+    "\n",
+    "# Scale numerical columns using StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "for col in numerical_columns:\n",
+    "    if col in col_data.columns:\n",
+    "        col_data[col] = scaler.fit_transform(col_data[[col]])\n",
+    "\n",
+    "# Step 5: Export the preprocessed dataset\n",
+    "output_path = \"data/bank-full-preprocessed.csv\"\n",
+    "col_data.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(f\"Preprocessed dataset saved to: {output_path}\")"
+   ],
+   "id": "a8c5c0616427dfd1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Columns in dataset: Index(['age;\"job\";\"marital\";\"education\";\"default\";\"balance\";\"housing\";\"loan\";\"contact\";\"day\";\"month\";\"duration\";\"campaign\";\"pdays\";\"previous\";\"poutcome\";\"y\"'], dtype='object')\n",
+      "Preprocessed dataset saved to: data/bank-full-preprocessed.csv\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-19T18:30:20.540329Z",
+     "start_time": "2024-12-19T18:30:20.537016Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "e75da34c097c63b3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "455e461dce54c427"
   }
  ],
  "metadata": {
