Applying normalization for numerical columns to implement neural networks

--- a/preProcess.ipynb
+++ b/preProcess.ipynb
@@ -12,8 +12,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-30T09:19:33.556343Z",
-     "start_time": "2024-12-30T09:19:33.338785Z"
+     "end_time": "2024-12-31T08:26:46.283643Z",
+     "start_time": "2024-12-31T08:26:46.090704Z"
     }
    },
    "source": [
@@ -89,8 +89,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:50:49.444164Z",
-     "start_time": "2024-12-29T07:50:49.401519Z"
+     "end_time": "2024-12-31T08:26:46.333581Z",
+     "start_time": "2024-12-31T08:26:46.304921Z"
     }
    },
    "cell_type": "code",
@@ -128,12 +128,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -144,8 +144,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:50:51.923179Z",
-     "start_time": "2024-12-29T07:50:51.913995Z"
+     "end_time": "2024-12-31T08:26:46.713429Z",
+     "start_time": "2024-12-31T08:26:46.703188Z"
     }
    },
    "cell_type": "code",
@@ -186,7 +186,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -197,8 +197,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:50:54.188949Z",
-     "start_time": "2024-12-29T07:50:54.138657Z"
+     "end_time": "2024-12-31T08:26:46.869047Z",
+     "start_time": "2024-12-31T08:26:46.829847Z"
     }
    },
    "cell_type": "code",
@@ -235,7 +235,7 @@
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -246,21 +246,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:50:58.670794Z",
-     "start_time": "2024-12-29T07:50:58.647597Z"
+     "end_time": "2024-12-31T08:26:46.951199Z",
+     "start_time": "2024-12-31T08:26:46.937174Z"
     }
    },
    "cell_type": "code",
    "source": "data = data.drop(columns=['duration'])",
    "id": "fe244ec6b1d8c594",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:51:01.998347Z",
-     "start_time": "2024-12-29T07:51:01.988262Z"
+     "end_time": "2024-12-31T08:26:47.013472Z",
+     "start_time": "2024-12-31T08:26:47.003781Z"
     }
    },
    "cell_type": "code",
@@ -295,7 +295,7 @@
      ]
     }
    ],
-   "execution_count": 10
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -306,8 +306,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:51:04.180164Z",
-     "start_time": "2024-12-29T07:51:04.131529Z"
+     "end_time": "2024-12-31T08:26:47.178306Z",
+     "start_time": "2024-12-31T08:26:47.116065Z"
     }
    },
    "cell_type": "code",
@@ -320,12 +320,12 @@
        "1784"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 11
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -336,8 +336,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:51:07.344731Z",
-     "start_time": "2024-12-29T07:51:07.281248Z"
+     "end_time": "2024-12-31T08:26:47.340670Z",
+     "start_time": "2024-12-31T08:26:47.221427Z"
     }
    },
    "cell_type": "code",
@@ -702,12 +702,38 @@
        "</div>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 12
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "__Transforming Categorical Data into numerical__",
+   "id": "f8f6f6f5e6e3da30"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-31T08:26:47.856279Z",
+     "start_time": "2024-12-31T08:26:47.494367Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "# Transforming categorical columns to numerical\n",
+    "cols = data.select_dtypes(\"object\").columns\n",
+    "le = LabelEncoder()\n",
+    "data[cols] = data[cols].apply(le.fit_transform)"
+   ],
+   "id": "321a02927dfb4459",
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -718,15 +744,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-29T07:51:10.397849Z",
-     "start_time": "2024-12-29T07:51:10.041030Z"
+     "end_time": "2024-12-31T08:26:48.348916Z",
+     "start_time": "2024-12-31T08:26:47.928314Z"
     }
    },
    "cell_type": "code",
    "source": "data.to_csv('data/bank-additional-full-preprocessed.csv', index=False)",
    "id": "2d0185bab3e11835",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 10
   }
  ],
  "metadata": {
